Fixed a z-index issue

--- a/_neayiHeaderFooter.scss
+++ b/_neayiHeaderFooter.scss
@@ -191,6 +191,10 @@
             }
         }
     }
+
+    .p-navbar {
+        z-index: auto;
+    }
 }
 
 /* Search form */
